--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ben Coleman # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Studying Data Science & Economics @ UW-Madison
+  Hello! I am a Junior at the Universty of Wisconsin-Madison studying Data Science and Economics graduating in the Spring of 2024. Take a look at some projects I've been working on!
   <br><br>
   Second description 
   <br><br>
