--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
  
 <br><br>
 
-  <a href="https://www.linkedin.com/in/example/">LinkedIn Profile</a> 
+  <a href="www.linkedin.com/in/benjamin-coleman02">LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
