--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hello! I'm a Junior at the Universty of Wisconsin-Madison studying Data Science and Economics graduating in the Spring of 2024. I'm pursuing a career in Data Science and am currently looking for an internship for this upcoming summer. Some areas of interest of mine are machine learning, data analytics, and econometrics. Take a look at some projects I've been working on!
 <br><br>
-<br><br>
-  <a href="www.linkedin.com/in/benjamin-coleman02">LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/benjamin-coleman02">LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
