--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ben Coleman # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hello! I'm a Junior at the Universty of Wisconsin-Madison studying Data Science and Economics. I'm pursuing a career in Data Science and am currently looking for an internship for this upcoming summer. Some areas of interest of mine are machine learning, data analytics, and econometrics. Take a look at some projects I've been working on! 
+  Hello! I'm a junior at the University of Wisconsin-Madison studying Data Science and Economics. I'm pursuing a career in Data Science and am currently looking for an internship for this upcoming summer. Some areas of interest of mine are machine learning, data analytics, and econometrics. Take a look at some projects I've been working on! 
   <br><br>
   <a href="https://www.linkedin.com/in/benjamin-coleman02/">LinkedIn Profile</a> 
   
