--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/benjamin-coleman02/">LinkedIn Profile</a> 
   
-theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have onegoogle_analytics: UA-000000-0 # your Google Analytics tracking ID here
