--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Ben Coleman Portfolio # your name (or website title) here
+title: Ben Coleman # your name (or website title) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Hello! I'm an undergraduate student at the University of Wisconsin-Madison studying Data Science and Economics, graduating in Spring of 2024. Some areas of interest of mine are machine learning, data analytics, and econometrics. Take a look at some projects I've been working on! 
   <br><br>
