--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have onegoogle_analytics: UA-000000-0 # your Google Analytics tracking ID here
+- jekyll-remote-theme # add this line to the plugins list if you already have one
