--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-title: Ben Coleman # your name (or website title) here
-<br><br>
-description: > # your text below (remove <br> elements if you don't need line breaks)
-  Hello! I'm an undergraduate student at the University of Wisconsin-Madison studying Data Science and Economics, graduating in Spring of 2024. Some areas of interest of mine are machine learning, data analytics, and econometrics. Take a look at some projects I've been working on! 
-  <br><br>
-  <br><br>
-  Phone: 1-773-849-4188
-  Email: benbcoleman08@gmail.com
-  <a href="https://www.linkedin.com/in/benjamin-coleman02/">LinkedIn Profile</a> 
-  
+---
+layout: home
+title: Ben Coleman
+---
+
+Hello! I'm an undergraduate student at the University of Wisconsin-Madison studying Data Science and Economics, graduating in Spring of 2024. Some areas of interest of mine are machine learning, data analytics, and econometrics. Take a look at some projects I've been working on!
+
+Phone: 1-773-849-4188  
+Email: benbcoleman08@gmail.com  
+[LinkedIn Profile](https://www.linkedin.com/in/benjamin-coleman02/)
+
