--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
----
-layout: home
-title: Ben Coleman
----
-
-
+title: Ben Coleman's Portfolio
+description: An undergraduate student at the University of Wisconsin-Madison studying Data Science and Economics. Graduating in Spring of 2024.
+theme: minima
