--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
+title: null
+description: null
 description: An undergraduate student at the University of Wisconsin-Madison studying Data Science and Economics. Graduating in Spring of 2024.
 theme: minima
